[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadlens"
version = "0.4.0"
description = "Official Python SDK for the Cadlens CAD parsing API — DWG, DXF, and DWF to JSON and PNG previews."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["httpx>=0.24"]
keywords = [
  "cad",
  "dwg",
  "dxf",
  "cad-parser",
  "cad-api",
  "dwg-parser",
  "sdk",
  "engineering-api",
  "aec",
  "construction-tech",
  "cadlens",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://cadlens.co"
Documentation = "https://cadlens.co/docs"
Repository = "https://github.com/cadlens-co/cadlens-sdk-python"
"Bug Tracker" = "https://github.com/cadlens-co/cadlens-sdk-python/issues"
